# trenchrun

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  AlphaBeta.cpp  AlphaBeta_8cpp.html  Board.cpp  Board.h  Board_8cpp.html  Board_8h.html  CMakeLists.txt  CMakePresets.json  Common.cpp  Common.h  Common_8cpp.html  Common_8h.html  Constants.h  Constants_8h.html  HACKING.md  Hash_8cpp.html  Hash_8h.html  Makefile  MiniMax.cpp  MiniMax_8cpp.html  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveGenerator_8cpp.html  MoveGenerator_8h.html  MoveList.cpp  MoveList.h  MoveList_8cpp.html  MoveList_8h.html  Move_8cpp.html  Move_8h.html  NegaMax.cpp  NegaMax_8cpp.html  Output.cpp  Output.h  Output_8cpp.html  (+46 more)
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: AlphaBeta.cpp  Board.cpp  Board.h  Common.cpp  Common.h  Constants.h  Hash.cpp  Hash.h  MiniMax.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveList.cpp  MoveList.h  NegaMax.cpp  Output.cpp  Output.h  Parser.cpp  Parser.h  PrincipalVariation.cpp  PrincipalVariation.h  Quiesce.cpp  Trenchrun.cpp  Types.h  ValidateMove.cpp  ValidateMove.h  Zobrist.cpp  Zobrist.h
test/: CMakeLists.txt
test/source/: TestBoard.cpp  TestMove.cpp  TestMoveGenerator.cpp  TestMoveList.cpp  TestParser.cpp  TestZobrist.cpp  Tests.cpp  Tests.h  TestsRunner.cpp
